# shanten-algorithm-collection

./: Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
algorithms/decomp/: Cargo.toml  README.md
algorithms/decomp/src/: lib.rs
algorithms/decomp_ara/: Cargo.toml  README.md
algorithms/decomp_ara/src/: lib.rs
algorithms/decomp_ara_removal/: Cargo.toml  README.md
algorithms/decomp_ara_removal/src/: lib.rs
algorithms/decomp_fixed_pruned/: Cargo.toml  README.md
algorithms/decomp_fixed_pruned/src/: lib.rs
algorithms/decomp_kobayashi/: Cargo.toml  README.md
algorithms/decomp_kobayashi/src/: lib.rs
algorithms/decomp_pruned/: Cargo.toml  README.md
algorithms/decomp_pruned/src/: lib.rs
algorithms/decomp_pruned_fixed/: Cargo.toml  README.md
algorithms/decomp_pruned_fixed/src/: lib.rs
algorithms/dummy/: Cargo.toml
algorithms/dummy/src/: lib.rs
algorithms/my_algo/: Cargo.toml  README.md
algorithms/my_algo/src/: lib.rs
algorithms/pruning_dfs_ymatsux/: Cargo.toml  README.md
algorithms/pruning_dfs_ymatsux/src/: lib.rs
common/: Cargo.toml
common/src/: bench_macros.rs  constants.rs  lib.rs  macros.rs  test.rs  test_macros.rs  test_utils.rs  traits.rs  types.rs
decomp_kobayashi/: Cargo.toml  README.md
decomp_kobayashi/src/: lib.rs
dummy/: Cargo.toml
dummy/src/: lib.rs
handgen/: Cargo.toml
handgen/src/: main.rs
resources/: hands_full_flush_10000.txt  hands_half_flush_10000.txt  hands_normal_10000.txt  hands_thirteen_orphans_10000.txt
