[package]
name = "decomp"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common = { path = "../../common" }
